...
      showErrorDisplay: false,
      errorDisplayText: errors.default,
    };
    this.logger = Logger.get(this.constructor.name);
  }

  signIn = async () => {
    const { navigation } = this.props;
    const { firebaseToken } = global;
    const { userName, password } = this.state;
    if (userName.length === 0 || password.length === 0) {
      this.setState({ emptyField: true });
      return;
...
      showErrorDisplay, errorDisplayText,
    } = this.state;
    const { navigation } = this.props;
    return (
      <View style={styles.container}>
        <Image
          testID="logoSignin"
          source={images.logoLight}
          style={styles.logo}
        />
        <ErrorDisplay
          showDisplay={showErrorDisplay}
          setShowDisplay={show => this.setState({ showErrorDisplay: show })}
          displayText={errorDisplayText}
        />
        <View style={styles.divider} />
        <TextInput
          testID="usernameSignIn"
          style={styles.inputContainer}
          placeholder="Username"
          value={userName}
          placeholderTextColor={colours.lightGray}
          onChangeText={text => { this.setState({ userName: text, invalidLogin: false }); }}
        />
        <TextInput
          testID="passwordSignIn"
          style={styles.inputContainer}
          placeholder="Password"
          value={password}
          secureTextEntry={showPassword}
          placeholderTextColor={colours.lightGray}
          onChangeText={text => { this.setState({ password: text, invalidLogin: false, emptyField: false }); }}
...
          title="Sign In"
          textColor={colours.white}
          backgroundColor={colours.accentPrimary}
          style={styles.button}
          onPress={this.signIn}
        />
        <Text style={styles.warning} testID="incorrectSignIn">{invalidLogin ? 'Invalid Login' : ''}</Text>
        <Text style={styles.warning} testID="emptySignIn">{emptyField ? 'Fields must not be empty' : ''}</Text>
      </View>
    );
  }
}

