...
    const buttonIcon = showSharedJobsView ? icons.chevronLeft : icons.inbox;
    const showInboxBadge = sharedJobs.length > 0 && !showSharedJobsView;

    if (loading) return <Loader />;

    return (
      <View style={styles.container} testID="jobSwipe">
        <MainHeader
          buttonIcon={buttonIcon}
          onPressLeft={() => this.toggleSharedJobsView()}
          onPressRight={() => navigation.openDrawer()}
          showBadge={showInboxBadge}
        />
...
